Xfce 4.6beta3 (Xfce 4.5.93)
===========================

  * Install xfconfd to $(libexecdir) instead of $(bindir).
  * Fix perl bindings link order on Cygwin (bug 4735).


Xfce 4.6beta2 (Xfce 4.5.92)
===========================

  * Add xfconf_channel_new_with_property_base() to restrict a channel
    to a subset of the property tree.
  * Add a dbus message filter to xfconfd that catches dbus daemon
    disconnect signals and flushes channels before xfconfd gets
    killed (bug 4487).
  * Change libxfconf GObject bindings API slightly to use gulong IDs
    for each binding to be used when removing bindings.  Extend the
    unbind functions a bit.
  * Bump libxfconf interface version due to incompatible change.
  * Add libxfconf perl bindings.
  * Remove xfconf_channel_remove_property() and
    xfconf_channel_remove_properties().
  * Only treat the XML file under $XDG_CONFIG_HOME as a "user" file,
    and treat all others as system files.  This fixes the problem where
    Xfce-installed defaults get read *after* the user's config when
    Xfce is installed to a user-writable prefix (bug 4592).
  * Fix build on Cygwin and other platforms that actually care about
    library link order (bug 4559).


Xfce 4.6beta1 (Xfce 4.5.91)
===========================

  * Remove xfsettingsd (moved to xfce4-settings package).  This removes
    xfconf's gtk+ dependency entirely.
  * Add xfconf_channel_get() which returns an XfconfChannel singleton
    object that lives until calling xfconf_shutdown().
  * Add xfconf_channel_reset_property(), which is a replacement for the
    'remove' functions.  This more accurately describes what 'remove'
    actually does in the presence of locked properties and/or properties
    that have system-wide defaults.
  * Deprecate xfconf_channel_remove_property() and
    xfconf_channel_remove_properties().
  * Change D-Bus interface to reflect above two changes.
  * Add IsPropertyLocked() to the D-Bus interface, as well as a